make profile page

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,9 +4,12 @@
     <button ion-button menuToggle icon-only>
       <ion-icon name='menu'></ion-icon>
     </button>
-    <ion-title>
-      {{cartlength}}
-    </ion-title>
+    <ion-item>
+      <ion-title class="nav_title">EE commerce</ion-title>
+      <ion-badge item-end class="badge">{{cartlength}}</ion-badge>
+    </ion-item>
+
+
   </ion-navbar>
 </ion-header>
 
