--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -14,5 +14,7 @@
 
 
 <ion-content padding>
-  <button ion-button (click)="open()">Open</button>
+  <ion-item>{{currentuser.username}}</ion-item>
+  <ion-item>{{currentuser.mobile}}</ion-item>
+  <button ion-button block (click)="open()">Closed</button>
 </ion-content>
