--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -24,7 +24,7 @@
       </ion-item>
 
       <ion-item>
-        <ion-input type="tel" value="" [(ngModel)]="mobile" name="mobile" placeholder="Mobile No."></ion-input>
+        <ion-input  type="number" value="" [(ngModel)]="mobile" name="mobile" placeholder="Mobile No." ></ion-input>
       </ion-item>
 
       <div padding>
