Enhance form validation

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,16 +1,14 @@
 
 <ion-header>
-  <ion-navbar>
+  <ion-toolbar>
     <button ion-button menuToggle icon-only>
       <ion-icon name='menu'></ion-icon>
     </button>
     <ion-item>
       <ion-title class="nav_title">EE commerce</ion-title>
-      <ion-badge item-end class="badge">{{cartlength}}</ion-badge>
+        <ion-badge *ngIf="cartlength!=0" item-end class="badge">{{cartlength}}</ion-badge>
     </ion-item>
-
-
-  </ion-navbar>
+  </ion-toolbar>
 </ion-header>
 
 
