--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -13,19 +13,21 @@
 </ion-header>
 
 <ion-content>
+
   <ion-list inset>
-    <form (ngSubmit)="checkinfo()">
+    <form [formGroup]="loginForm" (ngSubmit)="checkinfo()">
       <ion-item>
-        <ion-input type="text"  [(ngModel)]="username" name="username" value="" placeholder="Username" ></ion-input>
+        <ion-input type="text"  formControlName="username" name="username" value="" placeholder="Username"></ion-input>
+
       </ion-item>
 
       <ion-item>
-        <ion-input type="password" [(ngModel)]="password" name="password" value="" placeholder="Password"></ion-input>
+        <ion-input type="password" formControlName="password" name="password" value="" placeholder="Password"></ion-input>
       </ion-item>
 
 
       <div padding>
-        <button ion-button color="primary" block type="submit">Login</button>
+        <button ion-button color="primary" block type="submit" [disabled]="!loginForm.valid">Login</button>
       </div>
     </form>
 
