Added validator errors, dialog and toast

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -17,7 +17,7 @@
   <ion-list inset>
     <form [formGroup]="loginForm" (ngSubmit)="checkinfo()">
       <ion-item>
-        <ion-input type="text"  formControlName="username" name="username" value="" placeholder="Username"></ion-input>
+        <ion-input type="text"  id=username formControlName="username" name="username" value="" placeholder="Username"></ion-input>
 
       </ion-item>
 
@@ -32,5 +32,5 @@
     </form>
 
   </ion-list>
-
+  
 </ion-content>
