--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -33,7 +33,12 @@
     </form>
 
   </ion-list>
-
+<p>
+  Minimum length of password is 8
+</p>
+<p>
+  Mobile number should be a length of 10.
+</p>
 <div *ngIf="password?.invalid && (password?.dirty || password?.touched)">
        <div *ngIf="password?.errors">Minimum length of password is 8.</div>
 </div>
