--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -14,6 +14,8 @@
 
 
 <ion-content padding>
+  <button ion-button block class="login" (click)="tempclick()">temp</button>
+
   <button ion-button block class="login" (click)="onLogin()">Login</button>
   <button ion-button block class=signup (click)="onSignUp()">Sign Up</button>
 </ion-content>
